--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
       "sourceType": "module"
   },
   "rules": {
+    "class-methods-use-this": "off",
+    "camelcase": "off",
     "prettier/prettier": ["error",{
       "endOfLine": "auto"}
   ]
