--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pg": "^8.11.4",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
